# urfu-cl-lab

./: .clang-format  .clangd  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE  OUTPUT.md  README.md  TASKS.md  TODO.md  ref.md
cmake/: FindSDL2.cmake  FindSDL2_.cmake  FindSpdlog.cmake  Findglm.cmake
src/cl/: kernel_loader.cpp  kernel_loader.h
src/cl/kernels/: simple_add.cl  simple_divide.cl  simple_exponentiation.cl  simple_multiple.cl  simple_remove.cl  sum.cl  test.cl
src/compute/: compute.cpp  compute.h  compute_cpu.cpp  compute_cpu.h  compute_gpu.cpp  compute_gpu.h  cpu.cpp  cpu.h  fill_vectors.cpp  fill_vectors.h  kernel_loader.cpp  kernel_loader.h  new_gpu.cpp  new_gpu.h  opencl.cpp  opencl.h
src/compute/kernels/: addition_lattice_2d.cl  addition_vector_16.cl  addition_vector_2.cl  addition_vector_4.cl  addition_vector_8.cl  divide_vector_16.cl  divide_vector_2.cl  divide_vector_4.cl  divide_vector_8.cl  exponentiation_vector_16.cl  exponentiation_vector_2.cl  exponentiation_vector_4.cl  exponentiation_vector_8.cl  log_vector_16.cl  log_vector_2.cl  log_vector_4.cl  log_vector_8.cl  multiple_vector_16.cl  multiple_vector_2.cl  multiple_vector_4.cl  multiple_vector_8.cl  remove_vector_16.cl  remove_vector_2.cl  remove_vector_4.cl  remove_vector_8.cl  simple_add.cl  simple_divide.cl  simple_exponentiation.cl  simple_multiple.cl  simple_remove.cl  simple_vec_add.cl  simple_vector_addition_16.cl  simple_vector_addition_2.cl  simple_vector_addition_4.cl  simple_vector_addition_8.cl
src/core/: buffer_representation.cpp  buffer_representation.h  cl_image.cpp  cl_image.h  cl_mandelbrot.cpp  cl_mandelbrot.h  execution_time.cpp  execution_time.h  gl_image.cpp  gl_image.h  graphics.cpp  graphics.h  image.cpp  image.h  image_representation.cpp  image_representation.h  new_gpu.cpp  new_gpu.h  nyx.cpp  nyx.h  platform.cpp  platform.h  rgb_triangle.cpp  rgb_triangle.h  sdl_wrapper.cpp  sdl_wrapper.h  settings.cpp  settings.h  vao_triangle.cpp  vao_triangle.h
src/gui/: buffer_representation.cpp  buffer_representation.h  cl_image.cpp  cl_image.h  cl_mandelbrot.cpp  cl_mandelbrot.h  cl_particles.cpp  cl_particles.h  gl_image.cpp  gl_image.h  gl_matrices.cpp  gl_matrices.h  image_representation.cpp  image_representation.h  interop.cpp  interop.h  program.cpp  program.h  rgb_cube.cpp  rgb_cube.h  rgb_cube_texture.cpp  rgb_cube_texture.h  rgb_triangle.cpp  rgb_triangle.h  sdl_wrapper.cpp  sdl_wrapper.h  shader.cpp  shader.h  vao_triangle.cpp  vao_triangle.h
src/io/: kernel_loader.cpp  kernel_loader.h  texture_loader.cpp  texture_loader.h
src/io/log/: logger.cpp  logger.h
src/nyx_compute/: CMakeLists.txt
src/nyx_compute/src/: main.cpp  main.h
src/nyx_gl/: CMakeLists.txt
src/nyx_gl/src/: main.cpp
src/nyx_test/: CMakeLists.txt
src/nyx_test/src/: example.cl  main.cpp  main.h
src/nyx_test_2/: CMakeLists.txt
src/nyx_test_2/src/: main.cpp
src/platform/: compiler_version.cpp  compiler_version.h  platform.cpp  platform.h.in
